Add secret audio

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                 </div>
                 <i class='fas fa-angle-double-up close-arrow'></i>
                 <img src="./images/boo.png" alt="Miniature giant space hamsters" id="boo"> 
+                <audio id="squeak" src="./misc/squeak.mp3"></audio>
               </div>
         </section>   
         <section class="contact">
