Add new scrolling effect

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
 <body>
     <a href="#main" class="skip-link">Skip to main content</a>
-    <header> <!-- REMINDER TO ADD BG CRED -->
+    <header> 
         <div class="typewriter"><h1>hello!</h1>
         </div>
         <a href="#main"><i class='fas fa-angle-double-down' id="arrow"></i></a>
         <a href="https://unsplash.com/photos/RsRTIofe0HE" target="_blank" id="img-cred">Thanks to John Fowler for the background&nbsp;&nbsp; <i class="fas fa-heart"></i></a>
     </header>
     
-    <div id="main">
-        <div class="heading" id="about"> <!-- ABOUT -->
+    <div id="main"> <!-- YOU NEED TO PUT ALL H2 IN THE SAME PARENT -->
+        <section class="heading" id="about"> <!-- ABOUT --> 
             <h2>about</h2> 
             <div class ="content" id="about-content">
               <div id="about-content">
@@ -35,7 +35,7 @@
               </div>
               <i class='fas fa-angle-double-up close-arrow'></i>
             </div>
-        </div>
+        </section>
         <section class="heading" id="career"> <!-- CAREER -->
             <h2>career</h2> 
             <div class ="content">
@@ -149,7 +149,7 @@
                 <img src="./images/boo.png" alt="Miniature giant space hamsters" id="boo"> 
                 <audio id="squeak" src="./misc/squeak.mp3"></audio>
               </div>
-        </section>   
+        </section>
         <section class="contact">
             <a href="mailto:max.alterot@gmail.com"><img src="./images/mail_white.png" alt="e-mail"></a>
             <a href="https://github.com/alterot" target="_blank"><img src="./images/github_white.png" alt="Github"></a>
