--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gelasio:wght@400;600&family=Montserrat&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <title>Max Alterot - Web Developer</title>
+    <title>Max Alterot - Web Developer?</title>
 </head>
 
 <body>
@@ -28,9 +28,9 @@
             <div class ="content" id="about-content">
               <div id="about-content">
                 <p class="text">
-                    Is it possible to become a web developer while having a full-time job and two kids? That’s what I was hoping early in 2022 when I decided to plunge headfirst into the rabbit hole of learning JavaScript on my own. 
-                    Before then, I hadn't done much in terms of web development since I was a kid, and the &lt;frame&gt; attribute was super hot, so I wasn’t sure what to expect, but it has truly been a blast and the online community (Code Academy, The Odin Project, Discord) is a tremendous help. <br><br>
-                    Admittedly, it’s not always easy, but every time my motivation or confidence levels become too miserable, I look back at all I've learned in this past year and a half and that really keeps me going!
+                    Is it possible to become a Full Stack Web Developer while having a full-time job and two kids? That’s what I was hoping early in 2022 when I decided to plunge headfirst into the rabbit hole of learning JavaScript on my own. 
+                    Before then, I hadn't done much in terms of web development since I was a kid, and the &lt;frame&gt; attribute was super hot, so I wasn’t sure what to expect, but it has truly been a blast and the online community (Code Academy, The Odin Project, Discord) is a tremendous resource. <br><br>
+                    Admittedly, it’s not always easy, but every time my motivation or confidence levels sink to miserable levels, I look back at all I've learned in this past year and a half and that really keeps me going!
                     <br><br></p>
               </div>
               <i class='fas fa-angle-double-up close-arrow'></i>
@@ -41,13 +41,14 @@
             <div class ="content">
               <div id="career-content">
                 <p class="text">
-                    I started off as a management consultant to primarily Fortune 500 companies, proceeded to a business consultant for SME companies, <b>to end up as a front-end developer?</b> <br></br>
-                    After I graduated from my master's studies in Business Administration, I started as a management consultant at EY. I mostly worked in the consumer product sector with IT-related projects. 
-                    Since my move to Kalmar, I've worked as an advisor for smaller companies in the growth phase and focused more on sustainability. <br><br>
-                    I have worked as a project manager both at EY and my current employer and have a PRINCE2 Project Management certificate. Now I aim to combine the front-end developer role with my previous business and project management experience to hopefully bring a little extra value to the role.  
+                    I started off as a management consultant to primarily Fortune 500 companies, proceeded to a business consultant for SME companies, <b>to end up as a front-end developer?</b> 
+                    <br></br>After I graduated from my master's studies in Business Administration 2014, I started as a management consultant at EY. 
+                    I mostly worked in the consumer product sector with IT-related projects. Since I moved back to Kalmar three years ago, I've worked as a business advisor for smaller companies and focused more on sustainability. 
+                    <br><br> I have worked as a project manager my whole career both at EY and my current employer and have a PRINCE2 Project Management certificate. 
+                    Now I aim to combine the front-end developer role with my previous business and project management experience to hopefully bring a little extra value to the role.
+                    <br><br>And just to emphasize how professional I can be, please refer to the portrait. Pretty amazing, right? 
                     <br><br>
-                    And just to emphasize how professional I can be, please refer to the portrait. Pretty amazing, right? 
-                    <br><br></p>
+                    </p>
                 <div class="token"></div>
               </div>
               <i class='fas fa-angle-double-up close-arrow'></i>
@@ -102,8 +103,7 @@
             <div class ="content">
                 <div id="portfolio-content">
                     <p class="text">
-                        Here are some of my previous projects. To be honest I haven't exactly been over compensated for the projects below. 
-                        In fact, I've created most of them for my own amusement or to enhance my understanding of specific aspects of JavaScript. 
+                        Here are some of my previous projects that I've created purely for my own amusement or to enhance my understanding of a specific aspect of JavaScript. 
                         <br><br> Also, down in the bottom left corner you'll find a link to my GitHub profile if you're interested in reviewing some of the code or exploring more of my work.
                     </p> 
                     <div class="portfolio-list">
@@ -138,10 +138,12 @@
             <div class ="content">
                 <div id="personal-content">
                   <p class="text">
-                    Sections like this are the hardest to write, which is probably why I put it last on the page. I would prefer just writing code; then, if I get stuck, I can at least Google.
-                    <br><br>But anyway, I’m Max, I’m 36 years old, and I have two daughters (five and three years old). Despite what I sometimes think, I really enjoy having people around me (probably a side effect of having seven siblings).
-                     <br><br>I have a tendency to become very interested in certain things, and sometimes I get really obsessed with topics like programming, cocktails, hiking, etc. 
-                     <br><br>When I have the opportunity, I enjoy being outside, either spending a few days in the woods or exploring the surrounding areas on my paddle board. I’m also terrified of seeing how many hours I’ve spent on The Witcher 3.
+                    Sections like this are the hardest to write, which is probably why I put it last on the page. I would prefer just writing code; then, if I get stuck, I can at least Google it. 
+                    <br><br>But anyway, I’m Max, I’m 36 years old, and I have two amazing daughters (five and three years old). Despite what I sometimes think, I am a pretty social person and enjoy having people around me 
+                    (probably a side effect of having seven siblings).
+                    <br><br>I have a tendency to become very interested in certain things, and sometimes I get really obsessed with topics like programming, cocktails, hiking, etc. 
+                    <br><br>When I have the opportunity, I enjoy being outside, either spending a few days in the woods or exploring the surrounding areas on my paddle board. 
+                    I’m also terrified of seeing how many hours I’ve actually spent on The Witcher 3.
                      <br><br></p>
                   <div class="token2"></div>
                 </div>
