Update library img

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                 and event listeners to handle form submissions when adding new spells and remove buttons to delete spells from the spell list. 
                                 I implemented a Local Storage API to store and retrieve data in JSON format.
                             </p>
-                            <a href="https://alterot.github.io/spellbook/" target="_blank"><img src="./images/library.png" alt="Spellbook library"></a>
+                            <a href="https://alterot.github.io/spellbook/" target="_blank"><img src="./images/library.jpg" alt="Spellbook library"></a>
                         </div>
                         <div class="portfolio-container" id="tic-tac-toe">
                             <p><b>Tic-Tac-Toe</b><br><br>PvP Tic-Tac-Toe game I created with a Mobile First design for the CSS layout.
