update portfolio with hagen web app

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class ="content">
                 <div id="skills-content">
                     <p class="text">
-                        I’m confident with the front-end aspects of JavaScript as well as semantic HTML (such as WCAG), responsive CSS and Git/GitHub. I’m currently focusing on learning relevant and popular frameworks such as Bootstrap and React. 
+                        I’m confident with the front-end aspects of JavaScript (including Webpack, modules and SPA) as well as semantic HTML (such as WCAG), responsive CSS and Git/GitHub. I’m currently focusing on learning relevant and popular frameworks such as Bootstrap and React. 
                         I was tempted to start in this end but wanted to learn vanilla JavaScript and CSS first to really understand the fundamentals and improve my problem-solving skills.
                         <br><br>
                         My goal is to be a full-stack developer, so my next steps include NodeJS and MongoDB.
@@ -107,6 +107,12 @@
                         <br><br> Also, down in the bottom left corner you'll find a link to my GitHub profile if you're interested in reviewing some of the code or exploring more of my work.
                     </p> 
                     <div class="portfolio-list">
+                        <div class="portfolio-container">
+                            <p><b>Website for local cocktail bar</b><br><br>I developed a simple dynamic website for a local cocktail bar (very local, it is in fact, located on my porch). 
+                                <br>I developed the application using Webpack and a Single Page Application architecture to dynamically load content without full page reloads. Each page’s functionality and styling is encapsulated into separate modules, enhancing code organization and maintainability.
+                            </p>
+                            <a href="https://alterot.github.io/hagen/" target="_blank"><img src="./images/hagen.jpg" alt="Local cocktail bar"></a>
+                        </div>
                         <div class="portfolio-container">
                             <p><b>Spellbook library</b><br><br>I created a spellbook library for my ttrpg group, providing functionality to add, remove, and display spells.
                                 <br>I used object-oriented principles to create the constructor function with relevant properties, 
