update portfolio styling

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                             </p>
                             <a href="https://alterot.github.io/hagen/" target="_blank"><img src="./images/hagen.jpg" alt="Local cocktail bar"></a>
                         </div>
-                        <div class="portfolio-container">
+                        <div class="portfolio-container" id="spellbook">
                             <p><b>Spellbook library</b><br><br>I created a spellbook library for my ttrpg group, providing functionality to add, remove, and display spells.
                                 <br>I used object-oriented principles to create the constructor function with relevant properties, 
                                 and event listeners to handle form submissions when adding new spells and remove buttons to delete spells from the spell list. 
                                 I implemented a Local Storage API to store and retrieve data in JSON format.
                             </p>
-                            <a href="https://alterot.github.io/spellbook/" target="_blank"><img src="./images/library.jpg" alt="Spellbook library"></a>
+                            <a href="https://alterot.github.io/spellbook/" target="_blank"><img src="./images/library.png" alt="Spellbook library"></a>
                         </div>
                         <div class="portfolio-container" id="tic-tac-toe">
                             <p><b>Tic-Tac-Toe</b><br><br>PvP Tic-Tac-Toe game I created with a Mobile First design for the CSS layout.
@@ -128,7 +128,7 @@
                             </p>
                             <a href="https://alterot.github.io/tic-tac-toe/" target="_blank"><img src="./images/tictactoe.png" alt="Tic-Tac-Toe"></a>
                         </div>
-                        <div class="portfolio-container">
+                        <div class="portfolio-container" id="etchy">
                             <p><b>Etch-a-Scetch</b><br><br>A straightforward Etch-a-Sketch with different color modes and grid sizes.The purpose was primarily to improve my event handling and DOM manipulation skills.
                                 <br><br>It almost seems I have a thing for pink and turquoise now that I think about it.  
                             </p>
