update portfolio text

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </p> 
                     <div class="portfolio-list">
                         <div class="portfolio-container">
-                            <p><b>Website for local cocktail bar</b><br><br>I developed a simple dynamic website for a local cocktail bar (very local, it is in fact, located on my porch). 
+                            <p><b>Website for a local cocktail bar</b><br><br>I developed a simple dynamic website for a local cocktail bar (very local, it is in fact, located on my porch). 
                                 <br>I developed the application using Webpack and a Single Page Application architecture to dynamically load content without full page reloads. Each page’s functionality and styling is encapsulated into separate modules, enhancing code organization and maintainability.
                             </p>
                             <a href="https://alterot.github.io/hagen/" target="_blank"><img src="./images/hagen.jpg" alt="Local cocktail bar"></a>
