update intro text

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <div class="typewriter"><h1>hello!</h1>
         </div>
         <a href="#main"><i class='fas fa-angle-double-down' id="arrow"></i></a>
-        <a href="https://unsplash.com/photos/RsRTIofe0HE" target="_blank" id="img-cred">Thanks to John Fowler for the background&nbsp;&nbsp; <i class="fas fa-heart"></i></a>
+        <a href="https://unsplash.com/photos/RsRTIofe0HE" target="_blank" id="img-cred">Thanks John Fowler for the background&nbsp;&nbsp; <i class="fas fa-heart"></i></a>
     </header>
     
-    <div id="main"> <!-- YOU NEED TO PUT ALL H2 IN THE SAME PARENT -->
+    <div id="main"> 
         <section class="heading" id="about"> <!-- ABOUT --> 
             <h2>about</h2> 
             <div class ="content" id="about-content">
               <div id="about-content">
                 <p class="text">
                     Is it possible to become a Full Stack Web Developer while having a full-time job and two kids? That’s what I was hoping early in 2022 when I decided to plunge headfirst into the rabbit hole of learning JavaScript on my own. 
-                    Before then, I hadn't done much in terms of web development since I was a kid, and the &lt;frame&gt; attribute was super hot, so I wasn’t sure what to expect, but it has truly been a blast and the online community (Code Academy, The Odin Project, Discord) is a tremendous resource. <br><br>
+                    Before then, I hadn't done much in terms of web development since I was a kid, and the &lt;frame&gt; attribute was super hot, so I wasn’t sure what to expect, but it has truly been a blast and the online community is great and super helpful! <br><br>
                     Admittedly, it’s not always easy, but every time my motivation or confidence levels sink to miserable levels, I look back at all I've learned in this past year and a half and that really keeps me going!
                     <br><br></p>
               </div>
