Add API integration to portfolio

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class ="content">
                 <div id="skills-content">
                     <p class="text">
-                        I’m confident with the front-end aspects of JavaScript (including Webpack, modules and SPA) as well as semantic HTML (such as WCAG), responsive CSS and Git/GitHub. I’m currently focusing on learning relevant and popular frameworks such as Bootstrap and React. 
+                        I’m confident with the front-end aspects of JavaScript (including Webpack, modules and SPA) as well as semantic HTML (such as WCAG), responsive CSS and Git/GitHub. I’m currently focusing on learning Typescript and popular frameworks such as Bootstrap and React. 
                         I was tempted to start in this end but wanted to learn vanilla JavaScript and CSS first to really understand the fundamentals and improve my problem-solving skills.
                         <br><br>
                         My goal is to be a full-stack developer, so my next steps include NodeJS and MongoDB.
@@ -112,6 +112,13 @@
                                 <br>I developed the application using Webpack and a Single Page Application architecture to dynamically load content without full page reloads. Each page’s functionality and styling is encapsulated into separate modules, enhancing code organization and maintainability.
                             </p>
                             <a href="https://alterot.github.io/hagen/" target="_blank"><img src="./images/hagen.jpg" alt="Local cocktail bar"></a>
+                        </div>
+                        <div class="portfolio-container" id="api-gif-container">
+                            <p><b>Random GIF:s UPDATE TEXT</b><br><br>I wanted to start lightly with my back-end skills so I set up an integration with an open API (giphy.com)
+                                <br>The integration is setup so that it will generate a random "Critical Role" gif on every load. 
+                                <br>In hindsight it might not have very clever to present random GIFs on your portfolio but anyway. Apologize in advance if any of the GIFs are bad taste (it's unlikely).
+                            </p>
+                            <img id="api-gif" alt="Critical role GIF"></a>
                         </div>
                         <div class="portfolio-container" id="spellbook">
                             <p><b>Spellbook library</b><br><br>I created a spellbook library for my ttrpg group, providing functionality to add, remove, and display spells.
