update API portfolio

--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
                             <a href="https://alterot.github.io/hagen/" target="_blank"><img src="./images/hagen.jpg" alt="Local cocktail bar"></a>
                         </div>
                         <div class="portfolio-container" id="api-gif-container">
-                            <p><b>Random GIF:s UPDATE TEXT</b><br><br>I wanted to start lightly with my back-end skills so I set up an integration with an open API (giphy.com)
-                                <br>The integration is setup so that it will generate a random "Critical Role" gif on every load. 
-                                <br>In hindsight it might not have very clever to present random GIFs on your portfolio but anyway. Apologize in advance if any of the GIFs are bad taste (it's unlikely).
+                            <p><b>Black Sabbath random GIFs</b><br><br>I set up an integration with an open API (giphy.com) that will fetch a random Black Sabbath GIF when you load the page. 
+                                <br><br>In hindsight it might not have very clever to fetch and display <em>random</em> GIFs to your portfolio site. Especially considering the (awesome) nature of the band, but so far it's been ok. No GIFs on eaten bats thank god.
                             </p>
                             <img id="api-gif" alt="Critical role GIF"></a>
                         </div>
