update mobile version

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class ="content">
                 <div id="skills-content">
                     <p class="text">
-                        I’m confident with the front-end aspects of JavaScript (including Webpack, modules and SPA) as well as semantic HTML (such as WCAG), responsive CSS and Git/GitHub. I’m currently focusing on learning Typescript and popular frameworks such as Bootstrap and React. 
+                        I’m confident with the front-end aspects of JavaScript (including Webpack, modules and SPA) as well as semantic HTML (such as WCAG), responsive CSS (including BEM methodology) and Git/GitHub. I’m currently focusing on learning Typescript and popular frameworks such as Bootstrap and React. 
                         I was tempted to start in this end but wanted to learn vanilla JavaScript and CSS first to really understand the fundamentals and improve my problem-solving skills.
                         <br><br>
                         My goal is to be a full-stack developer, so my next steps include NodeJS and MongoDB.
@@ -151,7 +151,7 @@
                 <div id="personal-content">
                   <p class="text">
                     Sections like this are the hardest to write, which is probably why I put it last on the page. I would prefer just writing code; then, if I get stuck, I can at least Google it. 
-                    <br><br>But anyway, I’m Max, I’m 36 years old, and I have two amazing daughters (five and three years old). Despite what I sometimes think, I am a pretty social person and enjoy having people around me 
+                    <br><br>But anyway, I’m Max, I’m 36 years old, and I have two amazing daughters (six and three years old). Despite what I sometimes think, I am a pretty social person and enjoy having people around me 
                     (probably a side effect of having seven siblings).
                     <br><br>I have a tendency to become very interested in certain things, and sometimes I get really obsessed with topics like programming, cocktails, hiking, etc. 
                     <br><br>When I have the opportunity, I enjoy being outside, either spending a few days in the woods or exploring the surrounding areas on my paddle board. 
