add css portfolio

--- a/index.html
+++ b/index.html
@@ -115,13 +115,12 @@
                             <p><b>Popular designs from Dribble.com</b><br><br>
                                 Preparing for a future as a web developer, I aimed to replicate a few of the most popular designs on Dribble.com (as if they were mockups from a designer). 
                                 I didn’t have access to exact fonts, pixels, images, etc., but I strived to stay as true to the original as possible (changing a font or adding an image later down the line isn’t super hard after all). 
-                                <br><br>I used TypeScript in the presentation of the designs and I have consistently used BEM methodology in my styling. They are optimized for desktop.
+                                <br><br>I have consistently used BEM methodology in my styling, and to present the designs I created an image slider with TypeScript and React. They are optimized for desktop.
                             </p>
-                            <a href="https://alterot.github.io/css-portfolio" target="_blank"><img src="./images/css-portfolio.png" alt="CSS Portfolio"></a>
+                            <a href="https://alterot.github.io/css-portfolio-react" target="_blank"><img src="./images/css-portfolio.png" alt="CSS Portfolio"></a>
                         </div>
                         <div class="portfolio-container" id="spellbook-ts">
-                            <p><b>Spellbook library TypeScript</b><br><br>I created a new version of my spellbook library. This time using TypeScript and BEM methodology for the styling 
-                                (might as well rip those band aids of already since I’ll be using TypeScript going forward). I set up an asynchronous integration with fetch() to load a local JSON file with all spell data and display the relevant spells in accordance with selected filter.
+                            <p><b>Spellbook library TypeScript</b><br><br>I created a new version of my spellbook library. This time using TypeScript and BEM methodology for the styling. I set up an asynchronous integration with fetch() to load a local JSON file with all spell data and display the relevant spells in accordance with selected filters.
                                 <br><br>The code is modular and easily maintainable (I hope) with separate functions to handle user interactions in a clear and structured way. 
                             </p>
                             <a href="https://alterot.github.io/spellbook-ts/" target="_blank"><img src="./images/spellbook-ts.png" alt="Spellbook library TypeScript"></a>
