update portfolio intro

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="text">
                     I started off as a management consultant to primarily Fortune 500 companies, proceeded to a business consultant for SME companies, <b>to end up as a front-end developer?</b> 
                     <br></br>After I graduated from my master's studies in Business Administration 2014, I started as a management consultant at EY Advisory Services. 
-                    I mostly worked in the consumer product sector with IT-related projects. Since I moved back to Kalmar three years ago, I've worked as a business advisor for smaller companies and focused more on sustainability. 
+                    I mostly worked in the consumer product sector with IT-related projects. Since I moved back to Kalmar four years ago, I've worked as a business advisor for smaller companies and focused more on sustainability. 
                     <br><br> I have worked as a project manager my whole career both at EY and my current employer and have a PRINCE2 Project Management certificate. 
                     Now I aim to combine the front-end developer role with my previous business and project management experience to hopefully bring a little extra value to the role.
                     <br><br>And just to emphasize how professional I can be, please refer to the portrait. Pretty amazing, right? 
@@ -113,9 +113,9 @@
                     <div class="portfolio-list">
                         <div class="portfolio-container" id="css-portfolio">
                             <p><b>Popular designs from Dribble.com</b><br><br>
-                                Preparing for a future as a web developer, I aimed to replicate a few of the most popular designs on Dribble.com (as if they were mockups from a designer). 
+                                Preparing for a future as a web developer, I aimed to replicate a few of the most popular designs on Dribble.com as if they were mockups from a designer. 
                                 I didn’t have access to exact fonts, pixels, images, etc., but I strived to stay as true to the original as possible (changing a font or adding an image later down the line isn’t super hard after all). 
-                                <br><br>I have consistently used BEM methodology in my styling, and to present the designs I created an image slider with TypeScript and React. They are optimized for desktop.
+                                <br><br>I have consistently used BEM methodology in my styling, and to present the designs, I created an image slider with TypeScript and React. They are optimized for desktop.
                             </p>
                             <a href="https://alterot.github.io/css-portfolio-react" target="_blank"><img src="./images/css-portfolio.png" alt="CSS Portfolio"></a>
                         </div>
