--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <p><b>Popular designs from Dribble.com</b><br><br>
                                 Preparing for a future as a web developer, I aimed to replicate a few of the most popular designs on Dribble.com as if they were mockups from a designer. 
                                 I didn’t have access to exact fonts, pixels, images, etc., but I strived to stay as true to the original as possible (changing a font or adding an image later down the line isn’t super hard after all). 
-                                <br><br>I have consistently used BEM methodology in my styling, and to present the designs, I created an image slider with TypeScript and React. They are optimized for desktop.
+                                <br><br>I have consistently used BEM methodology in my styling, and to present the designs I created an image slider with TypeScript and React. They are optimized for desktop.
                             </p>
                             <a href="https://alterot.github.io/css-portfolio-react" target="_blank"><img src="./images/css-portfolio.png" alt="CSS Portfolio"></a>
                         </div>
