fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </div>
                         <div class="portfolio-container" id="api-gif-container">
                             <p><b>Black Sabbath random GIFs</b><br><br>I set up an integration with an open API (giphy.com) that will fetch a random Black Sabbath GIF when you load the page. 
-                                <br><br>In hindsight it might not have been very clever to fetch and display a <em>random</em> GIF on your portfolio site. Especially considering the (awesome) nature of the band in question, but so far it's gone ok. No GIFs on eaten bats thank god.
+                                <br><br>In hindsight it might not have been very clever to fetch and display a <em>random</em> GIF on your portfolio site. Especially considering the (awesome) nature of the band in question, but so far it's gone ok. No GIFs of eaten bats, thank god.
                             </p>
                             <img id="api-gif" alt="Black Sabbath GIF"></a>
                         </div>
